# med-atlas-ai

./: .env.example  .gitignore  .~lock.Virtue Foundation Ghana v0.3 - Sheet1.csv#  =0.3.0  AGENTS.md  README.md  Virtue Foundation Ghana v0.3 - Sheet1.csv  compress_prompt.py  csv.md  deploy_sql.py  fix_prompt.py  location.json  main.py  mlflow.db  pyproject.toml  requirements.txt  test_db.py
IDP/: .~lock.Virtue Foundation Ghana v0.3 - Sheet1.csv#  README.md  compute_regional_insights.py  facility_record_generator.py  main.py  populate_facility_facts.py  populate_facts.py  requirements.txt
IDP/Notebooks/: New Notebook 2026-03-22 14_24_13.ipynb  sql_queries.ipynb  state-values-fixations.ipynb
IDP/SQL_Tables/: affiliation_type.csv  facility_facts.csv  facility_type.csv  med_atlas_vs_endpoint.csv  mission_statements.csv  operator_type.csv  regional_insights.csv  specialities.csv
IDP/config/: __init__.py  facility_and_ngo_fields.py  free_form.py  organization_extraction.py
IDP/pipeline/: __init__.py  deduplicator.py  extractor.py  fact_generator.py  geocoder.py  loader.py  location_resolver.py  merger.py  preprocessor.py  test_regex_extraction.py
IDP/storage/: database.py  models.py
ai_agent/: README.md  __init__.py  agent.py  deploy_agent.py  run_sql.py  server.py  setup.py  setup_geospatial.sql  setup_uc_function.sql  test_agent.py  test_genie.py  test_genie_dict.py  test_tools.py
ai_agent/api/: main.py
ai_agent/api/routes/: agent.py  location.json  map.py
ai_agent/api/schemas/: agent.py  map.py
ai_agent/api/services/: databricks_sql.py
config/: facility_and_ngo_fields.py  medical_specialties.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: .env.example  App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AdvancedFiltersModal.tsx  ChatCitationsView.tsx  ChatFab.tsx  ChatMappedFacilitiesView.tsx  ChatPanel.tsx  FacilityDetailsPanel.tsx  Icons.tsx  MapCanvas.tsx  ResultsSidebar.tsx  TopSearchBar.tsx
frontend/src/lib/: api.ts  env.ts  format.ts  hooks.ts  types.ts
frontend/src/store/: ui-store.ts
pipeline/: __init__.py  embedding.py  extractor.py  fact_generator.py  loader.py  merger.py  preprocessor.py
storage/: __init__.py  database.py  models.py
vector/: __init__.py  vector_store.py
