[project]
name = "med-atlas-ai"
version = "0.1.0"
description = "Med-Atlas AI Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect>=14.3",
    "databricks-sdk>=0.28.0",
    "databricks-vectorsearch>=0.40",
    "langchain-core>=0.2.0",
    "langchain-databricks>=0.1.0",
    "mlflow-skinny>=2.11.3",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "W0511", # fixme
]
